lorem isum test

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100;0,9..144,200;0,9..144,300;0,9..144,400;0,9..144,500;0,9..144,600;0,9..144,700;0,9..144,800;0,9..144,900;1,9..144,100;1,9..144,200;1,9..144,300;1,9..144,400;1,9..144,500;1,9..144,600;1,9..144,700;1,9..144,800;1,9..144,900&display=swap"
+    rel="stylesheet">
 
   <title>Sunnyside agency landing page</title>
 
@@ -16,32 +21,65 @@
 <body>
   <div class="container">
     <div class="header">
-      <div class="orange">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, modi. Ducimus odit reiciendis quasi distinctio quis impedit beatae perferendis aliquid vero explicabo, expedita enim asperiores sapiente provident labore illo a?</div>
-      <div class="egg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates laborum iusto placeat enim, minima odit labore sint aliquam repellat excepturi, consequuntur ratione magnam rem voluptas veritatis soluta! Molestias, illo voluptatum!</div>
-      <div class="brand">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio voluptatibus cum aspernatur accusantium, assumenda, ducimus laboriosam voluptates consequatur nostrum beatae ullam. Architecto modi, minima cum iusto fugiat alias necessitatibus quod?</div>
+      <div class="orange">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, modi. Ducimus odit reiciendis
+        quasi distinctio quis impedit beatae perferendis aliquid vero explicabo, expedita enim asperiores sapiente
+        provident labore illo a?</div>
+      <div class="egg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates laborum iusto placeat enim,
+        minima odit labore sint aliquam repellat excepturi, consequuntur ratione magnam rem voluptas veritatis soluta!
+        Molestias, illo voluptatum!</div>
+      <div class="brand">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio voluptatibus cum aspernatur
+        accusantium, assumenda, ducimus laboriosam voluptates consequatur nostrum beatae ullam. Architecto modi, minima
+        cum iusto fugiat alias necessitatibus quod?</div>
     </div>
     <div class="upper">
-      <div class="glass">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perferendis minus molestiae, est nulla vitae sit omnis aspernatur ducimus, temporibus quis facere eligendi maxime veritatis. Sequi unde odit neque eos.</div>
-      <div class="audience">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus omnis minima a! Et, totam aliquid iure saepe quasi hic natus! Quasi in illo quos accusamus maxime ex sequi dolores!</div>
-      <div class="graphic_design">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum quae assumenda consequatur dicta quam ipsa? Error, eum omnis natus tenetur nihil quidem perferendis, culpa, soluta architecto doloribus fuga similique eaque?</div>
+      <div class="glass">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perferendis minus molestiae, est
+        nulla vitae sit omnis aspernatur ducimus, temporibus quis facere eligendi maxime veritatis. Sequi unde odit
+        neque eos.</div>
+      <div class="audience">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus omnis minima a!
+        Et, totam aliquid iure saepe quasi hic natus! Quasi in illo quos accusamus maxime ex sequi dolores!</div>
+      <div class="graphic_design">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum quae assumenda
+        consequatur dicta quam ipsa? Error, eum omnis natus tenetur nihil quidem perferendis, culpa, soluta architecto
+        doloribus fuga similique eaque?</div>
     </div>
     <div class="middle">
-      <div class="orange_full">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quia. Obcaecati amet magnam soluta quae nihil ab explicabo provident aliquam velit et libero sit quia sint, consectetur aut! Vitae, a!</div>
-      <div class="testimony1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, blanditiis nostrum cum impedit odit, officiis eos expedita consequuntur quibusdam similique aut veniam facilis, distinctio et ipsa quam laudantium. Dolor, nostrum!</div>
-      <div class="testimony2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta ab, odit commodi consequuntur nihil nesciunt accusamus voluptatibus beatae perspiciatis quos minus delectus ipsam illum ducimus odio exercitationem et? Commodi, maxime.</div>
+      <div class="orange_full">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quia. Obcaecati amet
+        magnam soluta quae nihil ab explicabo provident aliquam velit et libero sit quia sint, consectetur aut! Vitae,
+        a!</div>
+      <div class="testimony1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, blanditiis nostrum cum
+        impedit odit, officiis eos expedita consequuntur quibusdam similique aut veniam facilis, distinctio et ipsa quam
+        laudantium. Dolor, nostrum!</div>
+      <div class="testimony2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta ab, odit commodi
+        consequuntur nihil nesciunt accusamus voluptatibus beatae perspiciatis quos minus delectus ipsam illum ducimus
+        odio exercitationem et? Commodi, maxime.</div>
     </div>
     <div class="lower">
-      <div class="testimony3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, qui debitis aspernatur cum voluptatem distinctio! Recusandae natus at ipsa maxime eius est eveniet assumenda deleniti accusamus! Incidunt iure consequatur aliquam!</div>
+      <div class="testimony3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, qui debitis aspernatur cum
+        voluptatem distinctio! Recusandae natus at ipsa maxime eius est eveniet assumenda deleniti accusamus! Incidunt
+        iure consequatur aliquam!</div>
       <div class="patchwork">
-        <div class="milk">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident distinctio ea nulla commodi veniam. Ipsum provident velit delectus omnis minus, pariatur voluptatibus eius, debitis dolorem ad assumenda illum et corporis?</div>
-        <div class="orange3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quidem necessitatibus, earum possimus nihil expedita aliquam doloribus assumenda ipsam vitae modi sunt, nemo quam dolor ducimus quod impedit error numquam?</div>
-        <div class="sugar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nihil possimus commodi vero harum optio voluptatibus, amet hic deleniti in officia similique at natus, ratione tempore. Esse aut animi cumque.</div>
-        <div class="cornetto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt ratione eius veniam dolore nesciunt a, beatae dignissimos recusandae praesentium, maiores excepturi ullam exercitationem labore? Tempore blanditiis enim mollitia perferendis voluptatibus.</div>
+        <div class="milk">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident distinctio ea nulla commodi
+          veniam. Ipsum provident velit delectus omnis minus, pariatur voluptatibus eius, debitis dolorem ad assumenda
+          illum et corporis?</div>
+        <div class="orange3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quidem necessitatibus,
+          earum possimus nihil expedita aliquam doloribus assumenda ipsam vitae modi sunt, nemo quam dolor ducimus quod
+          impedit error numquam?</div>
+        <div class="sugar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nihil possimus commodi vero
+          harum optio voluptatibus, amet hic deleniti in officia similique at natus, ratione tempore. Esse aut animi
+          cumque.</div>
+        <div class="cornetto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt ratione eius veniam
+          dolore nesciunt a, beatae dignissimos recusandae praesentium, maiores excepturi ullam exercitationem labore?
+          Tempore blanditiis enim mollitia perferendis voluptatibus.</div>
       </div>
       <div class="footer">
-        <div class="logo_bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quo repudiandae, esse placeat odit consequuntur, similique nam ea fugiat, asperiores minima labore vel doloremque est. Esse impedit placeat qui autem?</div>
-        <div class="nav_bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod hic, culpa omnis eos nam ad nobis impedit blanditiis asperiores odio quae illum. Debitis ad deserunt eveniet, provident repudiandae quo culpa.</div>
-        <div class="nav_socials">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis autem quidem molestias dignissimos quasi ullam, architecto a omnis obcaecati doloribus veritatis cumque itaque, ea dolorum eligendi! Harum, officia veritatis!</div>
+        <div class="logo_bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quo repudiandae, esse
+          placeat odit consequuntur, similique nam ea fugiat, asperiores minima labore vel doloremque est. Esse impedit
+          placeat qui autem?</div>
+        <div class="nav_bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod hic, culpa omnis eos nam
+          ad nobis impedit blanditiis asperiores odio quae illum. Debitis ad deserunt eveniet, provident repudiandae quo
+          culpa.</div>
+        <div class="nav_socials">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis autem
+          quidem molestias dignissimos quasi ullam, architecto a omnis obcaecati doloribus veritatis cumque itaque, ea
+          dolorum eligendi! Harum, officia veritatis!</div>
       </div>
     </div>
   </div>
