--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <body>
   <div class="container">
     <div class="header">
-      <div class="orange">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, modi. Ducimus odit reiciendis
+      <div class="orange">
+        <img src="./assets/images/photos/image-header.jpg" alt="">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, modi. Ducimus odit reiciendis
         quasi distinctio quis impedit beatae perferendis aliquid vero explicabo, expedita enim asperiores sapiente
         provident labore illo a?</div>
       <div class="egg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates laborum iusto placeat enim,
