--- a/index.html
+++ b/index.html
@@ -20,24 +20,25 @@
 
 <body>
   <div class="container">
+    <div class="fake_header"><img src="./assets/images/logo.svg" alt="logo" /></div>
     <div class="header">
-      <div class="orange">
-        <img src="./assets/images/photos/image-header.jpg" alt="">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, modi. Ducimus odit reiciendis
-        quasi distinctio quis impedit beatae perferendis aliquid vero explicabo, expedita enim asperiores sapiente
-        provident labore illo a?</div>
-      <div class="egg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates laborum iusto placeat enim,
-        minima odit labore sint aliquam repellat excepturi, consequuntur ratione magnam rem voluptas veritatis soluta!
-        Molestias, illo voluptatum!</div>
-      <div class="brand">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio voluptatibus cum aspernatur
-        accusantium, assumenda, ducimus laboriosam voluptates consequatur nostrum beatae ullam. Architecto modi, minima
-        cum iusto fugiat alias necessitatibus quod?</div>
+      <div class="slogan">
+        <h1>We are creatives</h1>
+      </div>
+      <div class="egg">
+
+      </div>
+      <div class="brand">
+
+      </div>
     </div>
     <div class="upper">
-      <div class="glass">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perferendis minus molestiae, est
+      <div class="glass">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perferendis minus molestiae,
+        est
         nulla vitae sit omnis aspernatur ducimus, temporibus quis facere eligendi maxime veritatis. Sequi unde odit
         neque eos.</div>
-      <div class="audience">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus omnis minima a!
+      <div class="audience">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus omnis minima
+        a!
         Et, totam aliquid iure saepe quasi hic natus! Quasi in illo quos accusamus maxime ex sequi dolores!</div>
       <div class="graphic_design">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum quae assumenda
         consequatur dicta quam ipsa? Error, eum omnis natus tenetur nihil quidem perferendis, culpa, soluta architecto
@@ -48,7 +49,8 @@
         magnam soluta quae nihil ab explicabo provident aliquam velit et libero sit quia sint, consectetur aut! Vitae,
         a!</div>
       <div class="testimony1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, blanditiis nostrum cum
-        impedit odit, officiis eos expedita consequuntur quibusdam similique aut veniam facilis, distinctio et ipsa quam
+        impedit odit, officiis eos expedita consequuntur quibusdam similique aut veniam facilis, distinctio et ipsa
+        quam
         laudantium. Dolor, nostrum!</div>
       <div class="testimony2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta ab, odit commodi
         consequuntur nihil nesciunt accusamus voluptatibus beatae perspiciatis quos minus delectus ipsam illum ducimus
@@ -59,13 +61,16 @@
         voluptatem distinctio! Recusandae natus at ipsa maxime eius est eveniet assumenda deleniti accusamus! Incidunt
         iure consequatur aliquam!</div>
       <div class="patchwork">
-        <div class="milk">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident distinctio ea nulla commodi
+        <div class="milk">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident distinctio ea nulla
+          commodi
           veniam. Ipsum provident velit delectus omnis minus, pariatur voluptatibus eius, debitis dolorem ad assumenda
           illum et corporis?</div>
         <div class="orange3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quidem necessitatibus,
-          earum possimus nihil expedita aliquam doloribus assumenda ipsam vitae modi sunt, nemo quam dolor ducimus quod
+          earum possimus nihil expedita aliquam doloribus assumenda ipsam vitae modi sunt, nemo quam dolor ducimus
+          quod
           impedit error numquam?</div>
-        <div class="sugar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nihil possimus commodi vero
+        <div class="sugar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nihil possimus commodi
+          vero
           harum optio voluptatibus, amet hic deleniti in officia similique at natus, ratione tempore. Esse aut animi
           cumque.</div>
         <div class="cornetto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt ratione eius veniam
@@ -74,10 +79,12 @@
       </div>
       <div class="footer">
         <div class="logo_bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quo repudiandae, esse
-          placeat odit consequuntur, similique nam ea fugiat, asperiores minima labore vel doloremque est. Esse impedit
+          placeat odit consequuntur, similique nam ea fugiat, asperiores minima labore vel doloremque est. Esse
+          impedit
           placeat qui autem?</div>
         <div class="nav_bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod hic, culpa omnis eos nam
-          ad nobis impedit blanditiis asperiores odio quae illum. Debitis ad deserunt eveniet, provident repudiandae quo
+          ad nobis impedit blanditiis asperiores odio quae illum. Debitis ad deserunt eveniet, provident repudiandae
+          quo
           culpa.</div>
         <div class="nav_socials">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis autem
           quidem molestias dignissimos quasi ullam, architecto a omnis obcaecati doloribus veritatis cumque itaque, ea
