mobile-first: header

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="header">
       <div class="slogan">
         <h1>We are creatives</h1>
+        <img src="./assets/images/icons/icon-arrow-down.svg" alt="arrow">
       </div>
       <div class="egg">
 
