--- a/index.html
+++ b/index.html
@@ -26,13 +26,19 @@
         <h1>We are creatives</h1>
         <img src="./assets/images/icons/icon-arrow-down.svg" alt="arrow">
       </div>
-      <div class="egg">
-
-      </div>
-      <div class="brand">
-
-      </div>
     </div>
+    <div class="egg">
+      <img src="./assets/images/photos/image-transform.jpg" alt="">
+    </div>
+    <div class="brand">
+      <h1>Transform your brand</h1>
+
+      <p>We are a full-service creative agency specializing in helping brands grow fast.
+      Engage your clients through compelling visuals that do most of the marketing for you.</p>
+    
+      <p>Learn more</p>
+    </div>
+
     <div class="upper">
       <div class="glass">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perferendis minus molestiae,
         est
