--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100;0,9..144,200;0,9..144,300;0,9..144,400;0,9..144,500;0,9..144,600;0,9..144,700;0,9..144,800;0,9..144,900;1,9..144,100;1,9..144,200;1,9..144,300;1,9..144,400;1,9..144,500;1,9..144,600;1,9..144,700;1,9..144,800;1,9..144,900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap" rel="stylesheet">
 
   <title>Sunnyside agency landing page</title>
 
@@ -34,19 +34,22 @@
       <h1>Transform your brand</h1>
 
       <p>We are a full-service creative agency specializing in helping brands grow fast.
-      Engage your clients through compelling visuals that do most of the marketing for you.</p>
-    
-      <p>Learn more</p>
+        Engage your clients through compelling visuals that do most of the marketing for you.</p>
+
+      <div class="learn_more"><a href="#">Learn more</a></div>
     </div>
 
     <div class="upper">
-      <div class="glass">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui perferendis minus molestiae,
-        est
-        nulla vitae sit omnis aspernatur ducimus, temporibus quis facere eligendi maxime veritatis. Sequi unde odit
-        neque eos.</div>
-      <div class="audience">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ducimus omnis minima
-        a!
-        Et, totam aliquid iure saepe quasi hic natus! Quasi in illo quos accusamus maxime ex sequi dolores!</div>
+      <div class="glass"><img src="./assets/images/photos/image-stand-out.jpg" alt=""></div>
+      <div class="audience">
+        <h1>Stand out to the right audience</h1>
+        <p>
+          Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build
+          and extend your brand in digital places.
+        </p>
+
+        <div class="learn_more"><a href="#">Learn more</a></div>
+      </div>
       <div class="graphic_design">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum quae assumenda
         consequatur dicta quam ipsa? Error, eum omnis natus tenetur nihil quidem perferendis, culpa, soluta architecto
         doloribus fuga similique eaque?</div>
