--- a/index.html
+++ b/index.html
@@ -44,61 +44,87 @@
       <div class="audience">
         <h1>Stand out to the right audience</h1>
         <p>
-          Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build
+          Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll
+          build
           and extend your brand in digital places.
         </p>
 
         <div class="learn_more"><a href="#">Learn more</a></div>
       </div>
-      <div class="graphic_design">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum quae assumenda
-        consequatur dicta quam ipsa? Error, eum omnis natus tenetur nihil quidem perferendis, culpa, soluta architecto
-        doloribus fuga similique eaque?</div>
+      <div class="graphic_design">
+        <h1>Graphic Design</h1>
+        <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures
+          potential
+          clients’ attention.</p>
+      </div>
     </div>
     <div class="middle">
-      <div class="orange_full">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quia. Obcaecati amet
-        magnam soluta quae nihil ab explicabo provident aliquam velit et libero sit quia sint, consectetur aut! Vitae,
-        a!</div>
-      <div class="testimony1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, blanditiis nostrum cum
-        impedit odit, officiis eos expedita consequuntur quibusdam similique aut veniam facilis, distinctio et ipsa
-        quam
-        laudantium. Dolor, nostrum!</div>
-      <div class="testimony2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta ab, odit commodi
-        consequuntur nihil nesciunt accusamus voluptatibus beatae perspiciatis quos minus delectus ipsam illum ducimus
-        odio exercitationem et? Commodi, maxime.</div>
+      <div class="orange_full">
+        <h1>Photography</h1>
+        <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+        </p>
+      </div>
+      <span class="testimonials">
+        <h1>Client Testimonials</h1>
+      </span>
+      <div class="testimony">
+        <img src="./assets/images/people/image-emily.jpg" alt="emily" />
+        <div class="quote">
+          <p>
+            We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always
+            hit.
+          </p>
+          <div class="name">Emily R.</div>
+          <div class="job">Marketing Director</div>
+        </div>
+      </div>
+      <div class="testimony">
+        <img src="./assets/images/people/image-thomas.jpg" alt="thomas" />
+        <div class="quote">
+          <p>
+            Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and
+            enjoyable
+            experience.
+          </p>
+          <div class="name">Thomas S.</div>
+          <div class="job">Chief Operating Officer</div>
+        </div>
+      </div>
     </div>
     <div class="lower">
-      <div class="testimony3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, qui debitis aspernatur cum
-        voluptatem distinctio! Recusandae natus at ipsa maxime eius est eveniet assumenda deleniti accusamus! Incidunt
-        iure consequatur aliquam!</div>
+      <div class="testimony"><img src="./assets/images/people/image-jennie.jpg" alt="jennie" />
+        <div class="quote">
+          <p>
+            Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+          </p>
+          <div class="name">Jennie F.</div>
+          <div class="job">Business Owner</div>
+        </div>
+      </div>
       <div class="patchwork">
-        <div class="milk">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident distinctio ea nulla
-          commodi
-          veniam. Ipsum provident velit delectus omnis minus, pariatur voluptatibus eius, debitis dolorem ad assumenda
-          illum et corporis?</div>
-        <div class="orange3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quidem necessitatibus,
-          earum possimus nihil expedita aliquam doloribus assumenda ipsam vitae modi sunt, nemo quam dolor ducimus
-          quod
-          impedit error numquam?</div>
-        <div class="sugar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus nihil possimus commodi
-          vero
-          harum optio voluptatibus, amet hic deleniti in officia similique at natus, ratione tempore. Esse aut animi
-          cumque.</div>
-        <div class="cornetto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt ratione eius veniam
-          dolore nesciunt a, beatae dignissimos recusandae praesentium, maiores excepturi ullam exercitationem labore?
-          Tempore blanditiis enim mollitia perferendis voluptatibus.</div>
+        <article>
+          <img src="./assets/images/photos/image-gallery-milkbottles.jpg" alt="">
+          <img src="./assets/images/photos/image-gallery-cone.jpg" alt="">
+
+        </article>
+        <article>
+          <img src="./assets/images/photos/image-gallery-orange.jpg" alt="">
+          <img src="./assets/images/photos/image-gallery-sugarcubes.jpg" alt="">
+        </article>
       </div>
       <div class="footer">
-        <div class="logo_bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste quo repudiandae, esse
-          placeat odit consequuntur, similique nam ea fugiat, asperiores minima labore vel doloremque est. Esse
-          impedit
-          placeat qui autem?</div>
-        <div class="nav_bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod hic, culpa omnis eos nam
-          ad nobis impedit blanditiis asperiores odio quae illum. Debitis ad deserunt eveniet, provident repudiandae
-          quo
-          culpa.</div>
-        <div class="nav_socials">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore blanditiis autem
-          quidem molestias dignissimos quasi ullam, architecto a omnis obcaecati doloribus veritatis cumque itaque, ea
-          dolorum eligendi! Harum, officia veritatis!</div>
+        <div class="logo_bottom"><img src="./assets/images/logo_green.svg" alt="logo-green"></div>
+
+        <div class="nav_bottom">
+
+          <nav><a href="#">About</a><a href="#">Services</a><a href="#">Projects</a></nav>
+
+
+        </div>
+        <div class="nav_socials">
+          <nav><a href="#"><img src="./assets/images/icons/icon-facebook.svg" alt=""></a><a href="#"><img src="./assets/images/icons/icon-instagram.svg" alt=""></a><a href="#"><img
+                src="./assets/images/icons/icon-twitter.svg" alt=""></a><a href="#"><img src="./assets/images/icons/icon-pinterest.svg" alt=""></a></nav>
+        </div>
       </div>
     </div>
   </div>
