--- a/index.html
+++ b/index.html
@@ -1,134 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap" rel="stylesheet">
+    <title>Sunnyside agency landing page</title>
+  </head>
 
-  <title>Sunnyside agency landing page</title>
-
-</head>
-
-<body>
-  <div class="container">
-    <div class="fake_header"><img src="./assets/images/logo.svg" alt="logo" /></div>
-    <div class="header">
-      <div class="slogan">
-        <h1>We are creatives</h1>
-        <img src="./assets/images/icons/icon-arrow-down.svg" alt="arrow">
+  <body>
+    <div class="container">
+      <div class="fake_header">
+        <img class="logo" src="./assets/images/logo.svg" alt="logo" />
+        <nav class="nav_top">
+          <ul>
+            <li>About</li>
+            <li>Services</li>
+            <li>Projects</li>
+            <li id="contact">Contact</li>
+          </ul>
+        </nav>
+        <img class="hamburger" src="assets/images/icons/icon-hamburger.svg" />
       </div>
-    </div>
-    <div class="egg">
-      <img src="./assets/images/photos/image-transform.jpg" alt="">
-    </div>
-    <div class="brand">
-      <h1>Transform your brand</h1>
-
-      <p>We are a full-service creative agency specializing in helping brands grow fast.
-        Engage your clients through compelling visuals that do most of the marketing for you.</p>
-
-      <div class="learn_more"><a href="#">Learn more</a></div>
-    </div>
-
-    <div class="upper">
-      <div class="glass"><img src="./assets/images/photos/image-stand-out.jpg" alt=""></div>
-      <div class="audience">
-        <h1>Stand out to the right audience</h1>
-        <p>
-          Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll
-          build
-          and extend your brand in digital places.
-        </p>
-
-        <div class="learn_more"><a href="#">Learn more</a></div>
+      <div class="header">
+        <div class="slogan">
+          <h1>We are creatives</h1>
+          <img src="./assets/images/icons/icon-arrow-down.svg" alt="arrow" />
+        </div>
       </div>
-      <div class="graphic_design">
-        <h1>Graphic Design</h1>
-        <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures
-          potential
-          clients’ attention.</p>
-      </div>
-    </div>
-    <div class="middle">
-      <div class="orange_full">
-        <h1>Photography</h1>
-        <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-        </p>
-      </div>
-      <span class="testimonials">
-        <h1>Client Testimonials</h1>
-      </span>
-      <div class="testimony">
-        <img src="./assets/images/people/image-emily.jpg" alt="emily" />
-        <div class="quote">
+      <div class="middle">
+        <div class="egg">
+          <img src="./assets/images/photos/image-transform.jpg" alt="" />
+        </div>
+        <div class="brand">
+          <h1>Transform your brand</h1>
           <p>
-            We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always
-            hit.
+            We are a full-service creative agency specializing in helping brands
+            grow fast. Engage your clients through compelling visuals that do most
+            of the marketing for you.
           </p>
-          <div class="name">Emily R.</div>
-          <div class="job">Marketing Director</div>
+          <div class="learn_more"><a href="#">Learn more</a></div>
         </div>
       </div>
-      <div class="testimony">
-        <img src="./assets/images/people/image-thomas.jpg" alt="thomas" />
-        <div class="quote">
+
+      <div class="upper">
+        <div class="glass">
+          <img src="./assets/images/photos/image-stand-out.jpg" alt="" />
+        </div>
+        <div class="audience">
+          <h1>Stand out to the right audience</h1>
           <p>
-            Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and
-            enjoyable
-            experience.
+            Using a collaborative formula of designers, researchers,
+            photographers, videographers, and copywriters, we’ll build and
+            extend your brand in digital places.
           </p>
-          <div class="name">Thomas S.</div>
-          <div class="job">Chief Operating Officer</div>
+
+          <div class="learn_more"><a href="#">Learn more</a></div>
+        </div>
+        <div class="graphic_design">
+          <h1>Graphic Design</h1>
+          <p>
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients’
+            attention.
+          </p>
+        </div>
+      </div>
+      <div class="middle">
+        <div class="orange_full">
+          <h1>Photography</h1>
+          <p>
+            Increase your credibility by getting the most stunning, high-quality
+            photos that improve your business image.
+          </p>
+        </div>
+        <span class="testimonials">
+          <h1>Client Testimonials</h1>
+        </span>
+        <div class="testimony">
+          <img src="./assets/images/people/image-emily.jpg" alt="emily" />
+          <div class="quote">
+            <p>
+              We put our trust in Sunnyside and they delivered, making sure our
+              needs were met and deadlines were always hit.
+            </p>
+            <div class="name">Emily R.</div>
+            <div class="job">Marketing Director</div>
+          </div>
+        </div>
+        <div class="testimony">
+          <img src="./assets/images/people/image-thomas.jpg" alt="thomas" />
+          <div class="quote">
+            <p>
+              Sunnyside’s enthusiasm coupled with their keen interest in our
+              brand’s success made it a satisfying and enjoyable experience.
+            </p>
+            <div class="name">Thomas S.</div>
+            <div class="job">Chief Operating Officer</div>
+          </div>
+        </div>
+      </div>
+      <div class="lower">
+        <div class="testimony">
+          <img src="./assets/images/people/image-jennie.jpg" alt="jennie" />
+          <div class="quote">
+            <p>
+              Incredible end result! Our sales increased over 400% when we
+              worked with Sunnyside. Highly recommended!
+            </p>
+            <div class="name">Jennie F.</div>
+            <div class="job">Business Owner</div>
+          </div>
+        </div>
+        <div class="patchwork">
+          <article>
+            <img
+              src="./assets/images/photos/image-gallery-milkbottles.jpg"
+              alt=""
+            />
+            <img src="./assets/images/photos/image-gallery-cone.jpg" alt="" />
+          </article>
+          <article>
+            <img src="./assets/images/photos/image-gallery-orange.jpg" alt="" />
+            <img
+              src="./assets/images/photos/image-gallery-sugarcubes.jpg"
+              alt=""
+            />
+          </article>
+        </div>
+        <div class="footer">
+          <div class="logo_bottom">
+            <img src="./assets/images/logo_green.svg" alt="logo-green" />
+          </div>
+
+          <div class="nav_bottom">
+            <nav>
+              <a href="#">About</a><a href="#">Services</a
+              ><a href="#">Projects</a>
+            </nav>
+          </div>
+          <div class="nav_socials">
+            <nav>
+              <a href="#"
+                ><img src="./assets/images/icons/icon-facebook.svg" alt="" /></a
+              ><a href="#"
+                ><img
+                  src="./assets/images/icons/icon-instagram.svg"
+                  alt="" /></a
+              ><a href="#"
+                ><img src="./assets/images/icons/icon-twitter.svg" alt="" /></a
+              ><a href="#"
+                ><img src="./assets/images/icons/icon-pinterest.svg" alt=""
+              /></a>
+            </nav>
+          </div>
         </div>
       </div>
     </div>
-    <div class="lower">
-      <div class="testimony"><img src="./assets/images/people/image-jennie.jpg" alt="jennie" />
-        <div class="quote">
-          <p>
-            Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-          </p>
-          <div class="name">Jennie F.</div>
-          <div class="job">Business Owner</div>
-        </div>
-      </div>
-      <div class="patchwork">
-        <article>
-          <img src="./assets/images/photos/image-gallery-milkbottles.jpg" alt="">
-          <img src="./assets/images/photos/image-gallery-cone.jpg" alt="">
-
-        </article>
-        <article>
-          <img src="./assets/images/photos/image-gallery-orange.jpg" alt="">
-          <img src="./assets/images/photos/image-gallery-sugarcubes.jpg" alt="">
-        </article>
-      </div>
-      <div class="footer">
-        <div class="logo_bottom"><img src="./assets/images/logo_green.svg" alt="logo-green"></div>
-
-        <div class="nav_bottom">
-
-          <nav><a href="#">About</a><a href="#">Services</a><a href="#">Projects</a></nav>
-
-
-        </div>
-        <div class="nav_socials">
-          <nav><a href="#"><img src="./assets/images/icons/icon-facebook.svg" alt=""></a><a href="#"><img src="./assets/images/icons/icon-instagram.svg" alt=""></a><a href="#"><img
-                src="./assets/images/icons/icon-twitter.svg" alt=""></a><a href="#"><img src="./assets/images/icons/icon-pinterest.svg" alt=""></a></nav>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</body>
-
+  </body>
 </html>
