--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <h1>Transform your brand</h1>
           <p>
             We are a full-service creative agency specializing in helping brands
-            grow fast. Engage your clients through compelling visuals that do most
-            of the marketing for you.
+            grow fast. Engage your clients through compelling visuals that do
+            most of the marketing for you.
           </p>
           <div class="learn_more"><a href="#">Learn more</a></div>
         </div>
@@ -75,15 +75,15 @@
 
           <div class="learn_more"><a href="#">Learn more</a></div>
         </div>
-        <div class="graphic_design">
-          <h1>Graphic Design</h1>
-          <p>
-            Great design makes you memorable. We deliver artwork that
-            underscores your brand message and captures potential clients’
-            attention.
-          </p>
-        </div>
       </div>
+      <div class="graphic_design">
+        <h1>Graphic Design</h1>
+        <p>
+          Great design makes you memorable. We deliver artwork that underscores
+          your brand message and captures potential clients’ attention.
+        </p>
+      </div>
+
       <div class="middle">
         <div class="orange_full">
           <h1>Photography</h1>
