need help w/ desktop

--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
           <div class="learn_more"><a href="#">Learn more</a></div>
         </div>
       </div>
-      <div class="graphic_design">
-        <h1>Graphic Design</h1>
-        <p>
-          Great design makes you memorable. We deliver artwork that underscores
-          your brand message and captures potential clients’ attention.
-        </p>
-      </div>
-
-      <div class="middle">
+      <div class="GDP">
+        <div class="graphic_design">
+          <h1>Graphic Design</h1>
+          <p>
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients’
+            attention.
+          </p>
+        </div>
         <div class="orange_full">
           <h1>Photography</h1>
           <p>
@@ -92,9 +92,11 @@
             photos that improve your business image.
           </p>
         </div>
-        <span class="testimonials">
-          <h1>Client Testimonials</h1>
-        </span>
+      </div>
+      <span class="testimonials">
+        <h1>Client Testimonials</h1>
+      </span>
+      <div class="lower">
         <div class="testimony">
           <img src="./assets/images/people/image-emily.jpg" alt="emily" />
           <div class="quote">
@@ -117,8 +119,7 @@
             <div class="job">Chief Operating Officer</div>
           </div>
         </div>
-      </div>
-      <div class="lower">
+
         <div class="testimony">
           <img src="./assets/images/people/image-jennie.jpg" alt="jennie" />
           <div class="quote">
@@ -130,22 +131,24 @@
             <div class="job">Business Owner</div>
           </div>
         </div>
-        <div class="patchwork">
+      </div>
+      <div class="bottom">
+        <section class="patchwork">
           <article>
             <img
               src="./assets/images/photos/image-gallery-milkbottles.jpg"
               alt=""
-            />
+              />
+              <img src="./assets/images/photos/image-gallery-orange.jpg" alt="" />
+            </article>
+            <article>
             <img src="./assets/images/photos/image-gallery-cone.jpg" alt="" />
-          </article>
-          <article>
-            <img src="./assets/images/photos/image-gallery-orange.jpg" alt="" />
             <img
               src="./assets/images/photos/image-gallery-sugarcubes.jpg"
               alt=""
             />
           </article>
-        </div>
+        </section>
         <div class="footer">
           <div class="logo_bottom">
             <img src="./assets/images/logo_green.svg" alt="logo-green" />
